Fix overlapping legend in fieldsets

--- a/themes/fom_theme/sass/fom.sass
+++ b/themes/fom_theme/sass/fom.sass
@@ -109,3 +109,7 @@
       padding: 0
     .field-item::after
       content: ","
+
+// Fix: Without this the legend will overlap the content.
+fieldset
+  border: 1px solid transparent
